--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                         <div>
                             <h1 style="font-family: 'ZCOOL XiaoWei', serif;margin-top: 5%;color:	#696969" id="about">About Me</span></h1>
                         </div>
-                  <h2 style="font-family: 'ZCOOL XiaoWei', serif">I am a Junior fullstack Developer</h2>
+                  <h2 style="font-family: 'ZCOOL XiaoWei', serif">I am a Sinior fullstack Developer</h2>
                   <p class="mb-4" style="font-size: 17px;font-family: 'ZCOOL XiaoWei', serif">I hold an A2 degree in Computer Science and i have been  pursuing my learning journey in Moringa School for the last six months. where i have been coding day to day basis, and here are some of the tools i am capable of using Excellently:</p>
                   <div class="d-flex">
                     <ul style="font-size: 17px;font-family: 'ZCOOL XiaoWei', serif">
@@ -154,14 +154,12 @@
         <div class="footer" style="width:100%;height: 500px;margin-top: 30%">
                 <div class="row" style="width:100%;">
                     <div class="col-md-4" style="margin-top: 5%;margin-left: 10%">
-                        <h1 class="my-0 site-logo" style="font-family: 'ZCOOL XiaoWei', serif">More</span> </a></h1>
-                        <p style="font-size: 17px;font-family: 'ZCOOL XiaoWei', serif">
-                                I'm a young lady aged 21. this is me , and this is what i do. 
-                                Pleade reachout to me , it will be my pleasure to help you, 
-                                for more information about me and bio,see on my social medias.
-                                 here are the accounts info on the right side &#10145;
-                                 
-                        </p>
+                        <h1 class="my-0 site-logo" style="font-family: 'ZCOOL XiaoWei', serif">Site Links</span> </a></h1>
+                        <p style="font-size: 17px;font-family: 'ZCOOL XiaoWei', serif;"><a href="#about" style="color:white">ABOUT ME</a></p>
+                        <p style="font-size: 17px;font-family: 'ZCOOL XiaoWei', serif" ><a href="#index.html" style="color:white;margin-left: 3%">HOME PAGE</a></p>
+                        <p style="font-size: 17px;font-family: 'ZCOOL XiaoWei', serif"><a href="#projects" style="color:white">PROJECTS</a></p>
+                        <p style="font-size: 17px;font-family: 'ZCOOL XiaoWei', serif"><a href="#contacts" style="color:white;margin-left: 3%">CONTACTS</a</p>
+
                     </div>
                     <div class="col-md-4" style="margin-top: 5%;margin-left: 10%">
                         <h1 class="my-0 site-logo" style="font-family: 'ZCOOL XiaoWei', serif" id="contacts">Contacts</span> </a></h1>
