--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 <div style="width:100%;height:590px;">
     <div style="margin-top: 5%">
                 <div class="col-md-6">
-                  <img src="images/IMG-20190529-WA0011.jpg" alt="Image" class="img-fluid" class="img-fluid" style="width:70%;height: 590px">
+                  <img src="images/jacky.jpg" alt="Image" class="img-fluid" class="img-fluid" style="width:80%;height: 590px">
                 </div>
                 <div class="col-md-6">
                         <div>
